unreleased

* Bug fixes

  * Fix use of ST_Contains during view creation

2014-08-20 / 0.0.1

initial release